# gemini-blog-buddy

./: .gitignore  Agentic AI Courses and Videos.md  README.md
server/: README.md  blog_scraper.py  blog_sources.yaml  blogs.duckdb  blogs.md  blogs.md.migrated  blogs_db.py  main.py  pyproject.toml  rag_pipeline.py  update_blogs_md.py
server/documents/: https-ai-google-dev-gemma-docs-core-1775222997.md  https-ai-meta-com-blog-alta-daily-fashion-app-segment-anything-1775666997.md  https-ai-meta-com-blog-dinov3-self-supervised-vision-model-1774495800.md  https-ai-meta-com-blog-introducing-muse-spark-msl-1775667142.md  https-ai-meta-com-blog-page-2-1775579027.md  https-ai-meta-com-blog-scaling-how-we-build-test-advanced-ai-1775930713.md  https-ai-meta-com-blog-tribe-v2-brain-predictive-foundation-model-1774765511.md  https-ai-meta-com-research-publications-hyperagents-1774495741.md  https-alignment-openai-com-how-far-does-alignment-midtraining-generalize-1774767412.md  https-arxiv-org-html-2508-20263v1-1774888577.md  https-arxiv-org-html-2603-26524v1-1774886390.md  https-arxiv-org-html-2603-28052v1-1774976950.md  https-arxiv-org-html-2604-01193v1-1775314031.md  https-bair-berkeley-edu-blog-2025-11-01-rl-without-td-learning-1774024359.md  https-blog-google-innovation-and-ai-models-and-research-google-deepmind-1773932694.md  https-blog-langchain-com-continual-learning-for-ai-agents-1775492328.md  https-blog-langchain-com-how-moda-builds-production-grade-ai-design-agents-with-deep-agents-1774455680.md  https-blog-langchain-com-how-we-built-langchains-gtm-agent-1773938985.md  (+62 more)
(+13 files in other folders)
