[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "pyyaml>=6.0.1",
    "uvicorn>=0.38.0",
    "pyaml>=25.7.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "faiss-cpu>=1.8.0",
    "duckdb>=1.5.0",
    "trafilatura>=2.0.0",
    "networkx>=3.6.1",
]
